# flow_channel_cnn

./: .gitignore  CLAUDE.md  DEVELOP.rst  README.rst  pyproject.toml
flow_channel_cnn/: cli.py  layers.py  models.py  utils.py
flow_channel_cnn/experiments/: README.rst  _slurm_submit.sh  train_channel_flow.py  train_channel_vae.py  train_cnn.py  train_cnn__invariant.py  train_cnn__standard.py  train_invariant_cnn.py
flow_channel_cnn/models/: __init__.py  cnn.py  flow.py  vae.py
tests/: test_models.py  test_util.py  utils.py
tests/artifacts/: README.md
